--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,10 @@
 {
+  "https_port": 5008,
   "Settings": {
     "DBName": "SqliteDB.db",
     "TableName": "urlmappingtable"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
